@@ -83,7 +83,11 @@ typedef enum rpmQVSources_e {
     RPMQV_WHATREQUIRES,	/*!< ... from requires db search. */
     RPMQV_TRIGGEREDBY,	/*!< ... from trigger db search. */
     RPMQV_DBOFFSET,	/*!< ... from database header instance. */
-    RPMQV_SPECFILE	/*!< ... from spec file parse (query only). */
+    RPMQV_SPECFILE,	/*!< ... from spec file parse (query only). */
+    RPMQV_PKGID,	/*!< ... from package id (header+payload MD5). */
+    RPMQV_HDRID,	/*!< ... from header id (immutable header SHA1). */
+    RPMQV_FILEID,	/*!< ... from file id (file MD5). */
+    RPMQV_TID		/*!< ... from install transaction id (time stamp). */
 } rpmQVSources;
 
 /** \ingroup rpmcli
